adding new jvm args