@@ -1,11 +1,16 @@
 -server
 -Xms3g
 -Xmx4g
+-XX:SurvivorRatio=20
 -XX:NewRatio=3
 -Xss16m
+-XX:NewSize=700m
+-XX:MaxNewSize=700m
+-XX:+UseParNewGC
 -XX:+UseConcMarkSweepGC
 -XX:+CMSParallelRemarkEnabled
 -XX:ConcGCThreads=4
+-XX:ParallelGCThreads=8
 -XX:ReservedCodeCacheSize=240m
 -XX:+AlwaysPreTouch
 -XX:+TieredCompilation
